--- a/projects/oblique/src/styles/scss/material/_mat-select.scss
+++ b/projects/oblique/src/styles/scss/material/_mat-select.scss
@@ -11,12 +11,6 @@
 	.mat-mdc-select-value {
 		z-index: 1;
 	}
-
-	.mat-mdc-select-trigger {
-		.ob-form-lg & {
-			margin-top: core-variables.$ob-spacing-md;
-		}
-	}
 }
 
 @include mat-panel.margin-top("select", 0.75 * core-variables.$ob-spacing-xs);
